--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table cellspacing="30">
             <tr>
-                <td><img src="Ulas.png.png" alt="Ulas's photo" ></td>
+                <td><img src="Ulas.png" alt="Ulas's photo" ></td>
                 <td>
                     <h1>Ulaş Arslan</h1>
                     <p><em>Student of the <strong><a href="https://bidb.ege.edu.tr/files/bidb/bilsis/">Ege University</a></strong></em></p>
